[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-stacker-civitai-tags"
version = "1.0.1"
description = "Fetches CivitAI trainedWords (trigger tags) for a LoRA stack and returns them as a comma-separated string."
authors = [
  {name = "Lorastack Tag autoloader", email = "kole.tackney@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "requests",
]


[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/KoleTackney/lora-stacker-civitai-tags"
BugTracker = "https://github.com/KoleTackney/lora-stacker-civitai-tags/issues"
Documentation = "https://github.com/KoleTackney/lora-stacker-civitai-tags/wiki"


[tool.comfy]
PublisherId = "kolet"
DisplayName = "LoRA Stacker CivitAI Tags"
Icon = ""
Tags = ["lora", "civitai", "efficiency-nodes", "lora-stacker", "tags", "prompt"]
Repository = "https://github.com/KoleTackney/lora-stacker-civitai-tags"

includes = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
